--- a/about.html
+++ b/about.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>About Me</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+
     <style>
         body {
-    background-color:#2c3e50; 
+    background-color:lightblue; 
     color: #333;  
     font-family: Arial, sans-serif;
 }
@@ -37,12 +40,8 @@ footer {
 .btn-primary {
     background-color: #3498db; 
     border-color: #2980b9; 
-}b9; 
 }
     </style>
-</head>
-<body>
-
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">My Portfolio</a>
@@ -70,13 +69,11 @@ footer {
             </div>
         </div>
     </nav>
-    
-    <section class="hero text-center text-white" style="background-color: #2c3e50;">
+    <section class="about-me py-5">
         <div class="container">
-            <h1>Hello! I am Marielle Sta. Juana!</h1>
-            <img src="me.jpg" alt="Profile Picture" class="profile-img img-fluid rounded-circle" style="width: 150px; height: 150px; object-fit: cover;">
-            <p>Discover my work, skills, and how to get in touch with me.</p>
-            <a href="about.html" class="btn btn-primary">Learn More About Me</a>
+            <h2 class="text-center">About Me</h2>
+            <p class="lead">Hello! I am Marielle Sta. Juana, 19 years old, a 2nd year college student of West Visayas States University-Lambunao Campus taking up Bachelor in Science in Information Technology.</p>
+            <p>I have worked on various projects, ranging from simple landing pages to complex web applications. My skills include HTML, CSS, and PHP. I am always looking to improve my skills and stay up to date with the latest technologies.</p>
         </div>
     </section>
 
