--- a/contact.html
+++ b/contact.html
@@ -3,46 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Contact</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <style>
-        body {
-    background-color:#2c3e50; 
-    color: #333;  
-    font-family: Arial, sans-serif;
-}
-
-.hero h1 {
-    color: #fff; 
-
-.hero p {
-    color: #fff;
-
-.hero {
-    background-color: #2c3e50; 
-
-
-.navbar {
-    background-color: #333; 
-}
-
-
-footer {
-    background-color: #333; 
-    color: #fff; 
-    padding: 15px 0; 
-}
-
-.btn-primary {
-    background-color: #3498db; 
-    border-color: #2980b9; 
-}b9; 
-}
-    </style>
 </head>
 <body>
 
+    <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">My Portfolio</a>
@@ -70,15 +37,32 @@ footer {
             </div>
         </div>
     </nav>
-    
-    <section class="hero text-center text-white" style="background-color: #2c3e50;">
+
+    <!-- Contact Section -->
+    <section class="contact py-5">
         <div class="container">
-            <h1>Hello! I am Marielle Sta. Juana!</h1>
-            <img src="me.jpg" alt="Profile Picture" class="profile-img img-fluid rounded-circle" style="width: 150px; height: 150px; object-fit: cover;">
-            <p>Discover my work, skills, and how to get in touch with me.</p>
-            <a href="about.html" class="btn btn-primary">Learn More About Me</a>
+            <h2 class="text-center">Contact Me</h2>
+            <form action="#" method="post">
+                <div class="mb-3">
+                    <label for="name" class="form-label">Name</label>
+                    <input type="text" class="form-control" id="name" required>
+                </div>
+                <div class="mb-3">
+                    <label for="email" class="form-label">Email</label>
+                    <input type="email" class="form-control" id="email" required>
+                </div>
+                <div class="mb-3">
+                    <label for="message" class="form-label">Message</label>
+                    <textarea class="form-control" id="message" rows="4" required></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary">Send Message</button>
+            </form>
         </div>
     </section>
+
+    <footer class="bg-dark text-white text-center py-3">
+        <p>&copy; 2024 My Portfolio | All Rights Reserved</p>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
